# AFIT-CSCE689-HW1-S

./: CMakeLists.txt  Makefile
include/: TCPConn.h  TCPServer.h
src/: TCPClient.cpp  TCPConn.cpp  TCPServer.cpp  server_main.cpp
